src/johan_production/objects/eins_help__Chapter__c.object
<CustomObject>
    <fields>
        <fullName>eins_help__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>eins_help__Documentation__c</fullName>
        <label>Documentation</label>
        <referenceTo>eins_help__Documentation__c</referenceTo>
        <relationshipLabel>Chapters</relationshipLabel>
        <relationshipName>Chapters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>eins_help__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eins_help__Soft_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Soft Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eins_help__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Chapter</label>
    <listViews>
        <fullName>eins_help__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Chapter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chapters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>